--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mattress Heroes</title>
@@ -13,7 +13,7 @@
       <nav>
         <a href="#services">Services</a>
         <a href="#about">About Us</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">07700804672</a>
       </nav>
     </div>
   </header>
@@ -50,9 +50,9 @@
       <h2>Contact Us</h2>
       <p>Ready to refresh your mattress? Reach out to us today!</p>
       <ul>
-        <li>Phone: (123) 456-7890</li>
-        <li>Email: contact@mattressheroes.com</li>
-        <li>Location: City, State</li>
+        <li>Phone: 07700804672</li>
+        <li>Email: hsilvacw@gmail.com</li>
+        <li>Location: Jersey, St Aubin </li>
       </ul>
       <form>
         <input type="text" placeholder="Your Name" required>
