--- a/index.html
+++ b/index.html
@@ -1,72 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mattress Heroes</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <h1>Mattress Heroes</h1>
-      <nav>
-        <a href="#services">Services</a>
-        <a href="#about">About Us</a>
-        <a href="#contact">07700804672</a>
-      </nav>
-    </div>
-  </header>
-
-  <section id="hero">
-    <div class="container">
-      <h2>Professional Mattress Cleaning Services</h2>
-      <p>We make your mattresses spotless, fresh, and healthy to sleep on. Your comfort is our mission.</p>
-      <a href="#contact" class="btn">Get a Free Quote</a>
-    </div>
-  </section>
-
-  <section id="services">
-    <div class="container">
-      <h2>Our Services</h2>
+<section id="contact">
+  <div class="container">
+    <h2>Contact Us</h2>
+    <p>Ready to refresh your mattress? Reach out to us today!</p>
+    <ul>
+      <li><strong>Phone:</strong> <a href="tel:07700804672">07700804672</a> (also available on <a href="https://wa.me/07700804672" target="_blank">WhatsApp</a>)</li>
+      <li><strong>Email:</strong> <a href="mailto:hsilvacw@gmail.com">hsilvacw@gmail.com</a></li>
+      <li><strong>Location:</strong> Jersey, St Aubin</li>
+    </ul>
+    <div class="social-media">
+      <h3>Follow Us</h3>
       <ul>
-        <li>Deep Mattress Cleaning</li>
-        <li>Allergen Removal</li>
-        <li>Stain and Odor Treatment</li>
-        <li>On-Site Cleaning</li>
+        <li><a href="https://www.facebook.com/MattressHeroes" target="_blank">Facebook</a></li>
+        <li><a href="https://www.instagram.com/MattressHeroes" target="_blank">Instagram</a></li>
       </ul>
     </div>
-  </section>
-
-  <section id="about">
-    <div class="container">
-      <h2>About Mattress Heroes</h2>
-      <p>We are a team of cleaning professionals committed to ensuring your mattresses are as good as new. With years of experience, we specialize in delivering fast, reliable, and eco-friendly cleaning services.</p>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <p>Ready to refresh your mattress? Reach out to us today!</p>
-      <ul>
-        <li>Phone: 07700804672</li>
-        <li>Email: hsilvacw@gmail.com</li>
-        <li>Location: Jersey, St Aubin </li>
-      </ul>
-      <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Mattress Heroes. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
-</html>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</section>
