--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <section id="contact">
   <div class="container">
     <h2>Contact Us</h2>
-    <p>Ready to refresh your mattress? Reach out to us today!</p>
+    <p>At Mattress Heroes, we specialize in professional mattress treatments, ensuring a healthier and fresher sleeping environment. Based in Jersey, St Aubin, we also provide expert sofa cleaning, carpet cleaning, wooden floor steaming, and curtain care services. With a focus on quality and customer satisfaction, we’re here to make your home feel as clean and comfortable as ever. Contact us today!</p>
     <ul>
       <li><strong>Phone:</strong> <a href="tel:07700804672">07700804672</a> (also available on <a href="https://wa.me/07700804672" target="_blank">WhatsApp</a>)</li>
       <li><strong>Email:</strong> <a href="mailto:hsilvacw@gmail.com">hsilvacw@gmail.com</a></li>
