--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
-<section id="contact">
-  <div class="container">
-    <h2>Contact Us</h2>
-    <p>At Mattress Heroes, we specialize in professional mattress treatments, ensuring a healthier and fresher sleeping environment. Based in Jersey, St Aubin, we also provide expert sofa cleaning, carpet cleaning, wooden floor steaming, and curtain care services. With a focus on quality and customer satisfaction, we’re here to make your home feel as clean and comfortable as ever. Contact us today!</p>
-    <ul>
-      <li><strong>Phone:</strong> <a href="tel:07700804672">07700804672</a> (also available on <a href="https://wa.me/07700804672" target="_blank">WhatsApp</a>)</li>
-      <li><strong>Email:</strong> <a href="mailto:hsilvacw@gmail.com">hsilvacw@gmail.com</a></li>
-      <li><strong>Location:</strong> Jersey, St Aubin</li>
-    </ul>
-    <div class="social-media">
-      <h3>Follow Us</h3>
-      <ul>
-        <li><a href="https://www.facebook.com/MattressHeroes" target="_blank">Facebook</a></li>
-        <li><a href="https://www.instagram.com/MattressHeroes" target="_blank">Instagram</a></li>
-      </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mattress Heroes</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Mattress Heroes</h1>
+      <p>Your go-to professionals for mattress treatments and home cleaning services in Jersey, St Aubin.</p>
     </div>
-    <form>
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-</section>
+  </header>
+
+  <section id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>At Mattress Heroes, we specialize in professional mattress treatments, ensuring a healthier and fresher sleeping environment. Based in Jersey, St Aubin, we also provide expert sofa cleaning, carpet cleaning, wooden floor steaming, and curtain care services. With a focus on quality and customer satisfaction, we’re here to make your home feel as clean and comfortable as ever. Contact us today!</p>
+      <ul>
+        <li><strong>Phone:</strong> <a href="tel:07700804672">07700804672</a> (also available on <a href="https://wa.me/07700804672" target="_blank">WhatsApp</a>)</li>
+        <li><strong>Email:</strong> <a href="mailto:hsilvacw@gmail.com">hsilvacw@gmail.com</a></li>
+        <li><strong>Location:</strong> Jersey, St Aubin</li>
+      </ul>
+      <div class="social-media">
+        <h3>Follow Us</h3>
+        <ul>
+          <li><a href="https://www.facebook.com/MattressHeroes" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/MattressHeroes" target="_blank">Instagram</a></li>
+        </ul>
+      </div>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Mattress Heroes. All rights reserved. Proudly serving Jersey, St Aubin.</p>
+    </div>
+  </footer>
+</body>
+</html>
