--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Mattress Heroes</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body> <link rel="stylesheet" href="styles.css">
   <header>
     <div class="container">
       <h1>Mattress Heroes</h1>
