--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div class="social-media">
         <h3>Follow Us</h3>
         <ul>
-          <li><a href="https://www.facebook.com/MattressHeroes" target="_blank">Facebook</a></li>
-          <li><a href="https://www.instagram.com/MattressHeroes" target="_blank">Instagram</a></li>
+          <li><a href="https://www.facebook.com/https://www.facebook.com/profile.php?id=100065238862533" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/@MattressHeroes.je" target="_blank">Instagram</a></li>
         </ul>
       </div>
       <form>
