--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <link rel="stylesheet" href="styles.css">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mattress Heroes</title>
+  <meta name="description" content="Professional mattress treatments, sofa cleaning, carpet cleaning, wooden floor steaming, and curtain care services in Jersey, St Aubin.">
+  <meta name="keywords" content="Mattress cleaning, sofa cleaning, carpet cleaning, wooden floor cleaning, Jersey, St Aubin">
+  <meta name="author" content="Mattress Heroes">
+  <title>Mattress Heroes | Professional Cleaning Services</title>
   <link rel="stylesheet" href="styles.css">
 </head> <link rel="stylesheet" href="styles.css">
-<body> 
+<body>
   <header>
     <div class="container">
       <h1>Mattress Heroes</h1>
@@ -26,8 +29,8 @@
       <div class="social-media">
         <h3>Follow Us</h3>
         <ul>
-          <li><a href="https://www.facebook.com/https://www.facebook.com/profile.php?id=100065238862533" target="_blank">Facebook</a></li>
-          <li><a href="https://www.instagram.com/@MattressHeroes.je" target="_blank">Instagram</a></li>
+          <li><a href="https://www.facebook.com/share/156ejS6vs1/?mibextid=LQQJ4d" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/mattressheroes.je" target="_blank">Instagram</a></li>
         </ul>
       </div>
       <form>
@@ -41,7 +44,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Mattress Heroes. All rights reserved. Proudly serving Jersey, St Aubin.</p>
+      <p>&copy; 2023 Mattress Heroes. All rights reserved. Proudly serving Jersey, St Aubin.</p>
     </div>
   </footer>
 </body>
