--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Mattress Heroes">
   <title>Mattress Heroes | Professional Cleaning Services</title>
   <link rel="stylesheet" href="styles.css">
-</head> <link rel="stylesheet" href="styles.css">
+</head>
 <body>
   <header>
     <div class="container">
@@ -29,8 +29,8 @@
       <div class="social-media">
         <h3>Follow Us</h3>
         <ul>
-          <li><a href="https://www.facebook.com/share/156ejS6vs1/?mibextid=LQQJ4d" target="_blank">Facebook</a></li>
-          <li><a href="https://www.instagram.com/mattressheroes.je" target="_blank">Instagram</a></li>
+          <li><a href="https://www.facebook.com/156ejS6vs1" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/mattressheroes.je/" target="_blank">Instagram</a></li>
         </ul>
       </div>
       <form>
