--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="social-media">
         <h3>Follow Us</h3>
         <ul>
-          <li><a href="https://www.facebook.com/156ejS6vs1" target="_blank">Facebook</a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100065238862533" target="_blank">Facebook</a></li>
           <li><a href="https://www.instagram.com/mattressheroes.je/" target="_blank">Instagram</a></li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Mattress Heroes. All rights reserved. Proudly serving Jersey, St Aubin.</p>
+      <p>&copy; 2024 Mattress Heroes. All rights reserved. Proudly serving Jersey, St Aubin.</p>
     </div>
   </footer>
 </body>
